Guide about broker installations updated.